# luxel

./: .gitignore  .npmrc  Cargo.toml  LICENSE  README.md  glsl_desktop_renderer_claude_build_plan.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
crates/luxel-core/: Cargo.toml
crates/luxel-core/src/: bookmarks.rs  camera.rs  layout.rs  lib.rs  scene.rs  settings.rs  timeline.rs  validation.rs
crates/luxel-io/: Cargo.toml
crates/luxel-io/src/: lib.rs  migrations.rs  scene_file.rs
crates/luxel-io/tests/: scene_round_trip.rs
crates/luxel-render/: Cargo.toml
crates/luxel-render/src/: errors.rs  eval.rs  frame.rs  gpu.rs  lib.rs  overlay.rs  pipeline.rs  renderer.rs  shader.rs  shader_prelude.rs
crates/luxel-render/tests/: e2e_render.rs  eval_e2e.rs  naga_glsl_version_support.rs
crates/luxel-system/: Cargo.toml
crates/luxel-system/src/: cpu.rs  gpu_info.rs  lib.rs  memory.rs  status.rs
docs/: render-pixel-transport-optimization.md
examples/: default_scene.luxel.json
examples/shaders/: default.glsl  gradient.glsl  raymarch_sphere.glsl
scripts/: _common.py  build.py  clean.py  doctor.py  launch.py  package.py  test.py
src/: App.tsx  build-info.ts  examples.test.ts  examples.ts  featureFlags.ts  global.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  events.rs  lib.rs  main.rs
src/actions/: eval.ts  render.test.ts  render.ts  scene.ts
src/components/: AboutModal.tsx  AspectRatioControl.tsx  CameraBookmarks.tsx  CloseGuard.tsx  ConsolePanel.tsx  FpsOverlay.tsx  HelpModal.tsx  InspectorPanel.tsx  LayoutMenu.tsx  LayoutRoot.tsx  PlaybackBar.tsx  RenderView.tsx  Scratchpad.tsx  ShaderEditor.tsx  SlotFrame.tsx  Splitter.tsx  StatusLine.tsx  Toolbar.tsx  aspectMath.test.ts  aspectMath.ts  gizmoMath.test.ts  gizmoMath.ts  pixelMath.test.ts  pixelMath.ts  playbackMath.test.ts  playbackMath.ts  scratchpadComplete.test.ts  scratchpadComplete.ts  scratchpadFormat.test.ts  scratchpadFormat.ts
src/components/icons/: MagnifierIcons.tsx
src/glsl/: builtins.test.ts  builtins.ts
src/hooks/: useRenderDriver.ts
src/state/: appStore.test.ts  appStore.ts  consoleStore.test.ts  consoleStore.ts  layoutStore.test.ts  layoutStore.ts  sceneStore.test.ts  sceneStore.ts
src/styles/: app.css
src/tauri/: commands.ts  events.ts
tests/fixtures/: invalid_scene_missing_version.luxel.json  shader_compile_error.glsl  valid_scene.luxel.json
videos/: 01_intro.md
